syntax = "proto3";

option go_package = "pb/game";

import "common/tip.proto";
import "common/common.proto";
import "common/empty.proto";

option cc_generic_services = true;

service ClientPlayerCommonService 
{
  rpc SendTipToClient (TipInfoMessage) returns (Empty);
  rpc KickPlayer (TipInfoMessage) returns (Empty);
}